[package]
name = "internet-canary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "4.3.15", features = ["derive", "env"] }
hostname = "0.3.1"
lettre = "0.10.4"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
uptime_lib = "0.2.2"
ureq = "2.7.1"
