[package]
name = "internet-canary"
version = "0.1.0"
edition = "2021"

[lints.rust]
warnings = "deny"

[lints.clippy]
pedantic = "deny"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "4.3.15", features = ["derive", "env"] }
hostname = "0.4.0"
lettre = "0.11.11"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
uptime_lib = "0.3.1"
ureq = "2.7.1"
